[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airspace-defense"
version = "0.1.0"
description = "Airspace defense adversarial search (Alpha-Beta, Expectimax) — COMP-569"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "COMP-569" }]
keywords = ["game-theory", "adversarial-search", "expectimax", "alpha-beta", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
py-modules = ["AirspaceState", "heuristic_evaluation", "minimax_search", "alpha_beta_search", "expectimax_search"]
